--- a/index.html
+++ b/index.html
@@ -4,5 +4,12 @@ GHG<!DOCTYPE html>
      <title>
          My portfolio
      </title>
- </head>   
+ </head>  
+ <body>
+     <h3 style="color: red;text-align:center">My portfolio page</h3>
+     Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi mollitia enim porro eaque quod earum repellendus quibusdam delectus, accusantium rem dignissimos laboriosam temporibus ea commodi amet est aut, adipisci nobis, magnam praesentium consequuntur reprehenderit inventore ex! Consequuntur, obcaecati tempore iusto optio sint soluta dolores. Culpa nisi vel, repudiandae at expedita nobis, distinctio accusantium repellat assumenda aliquid ex porro nostrum necessitatibus veritatis minima cum sapiente. Facere esse fuga id voluptatum autem, excepturi doloremque provident voluptates! Cumque natus provident cupiditate sint consectetur, temporibus ducimus. In facilis magnam, vel aliquam commodi rem molestiae maiores quidem et quasi, quaerat eos. Cupiditate expedita sunt quibusdam ab harum eveniet soluta hic rem esse alias voluptatum fuga officia recusandae vitae autem numquam, commodi suscipit saepe temporibus, impedit consequatur voluptatem minus ipsam? Quaerat amet officia quo quam sit blanditiis minima velit perferendis? Vero, officia soluta omnis quo sit natus repudiandae fuga labore ipsum, id sed laborum voluptatem error officiis qui veniam. Laudantium, odio quae laborum nostrum vero iste dolore sint! Repellat distinctio aliquam, architecto exercitationem obcaecati maiores rerum aperiam optio numquam voluptatibus ducimus iure eligendi! Fugit magnam aperiam, dicta voluptas amet ut quae nesciunt ipsum explicabo voluptatibus possimus at enim id? Labore eius esse illo veritatis! Quisquam, modi!
+     Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque numquam illo quisquam eaque similique iure, aperiam id adipisci quasi doloribus, fugiat vero culpa. Unde esse facere minus dignissimos minima sunt?
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus voluptatibus libero porro corrupti ut iste, tenetur deleniti earum nulla veritatis asperiores, at odio pariatur nemo unde. Aperiam explicabo officiis blanditiis doloremque incidunt animi officia quaerat rerum, id veniam, quis placeat enim. Earum enim labore, nemo facere voluptatum quis laborum delectus ipsam suscipit autem quasi consequuntur minima nam quisquam dolor blanditiis voluptate maiores. Officiis beatae asperiores vel atque, rem consequatur recusandae necessitatibus magni, voluptas commodi architecto placeat reprehenderit sit. Ea tempore quia modi, debitis voluptates molestiae perferendis nisi. Sit, quos? Voluptatum inventore sequi aspernatur iusto similique, beatae nulla laboriosam eos rerum.
+
+</body> 
 </html>
